[gd_scene load_steps=9 format=2]

[ext_resource path="res://fontes/ARCADECLASSIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/login_api.gd" type="Script" id=2]
[ext_resource path="res://img/complementar/ajuda.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="login" type="Node2D"]
scale = Vector2( 1.1548, 1.00893 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 511.273 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -21.5195
margin_top = -15.7105
margin_right = 921.48
margin_bottom = 619.29
color = Color( 0.0509804, 0.00784314, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_usuario" type="Label" parent="."]
margin_left = 155.626
margin_top = 54.7831
margin_right = 730.626
margin_bottom = 178.783
custom_fonts/font = SubResource( 1 )
text = "Usuario"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensagem" type="Label" parent="."]
modulate = Color( 0.34902, 0.654902, 0.901961, 1 )
margin_left = 322.71
margin_top = 245.735
margin_right = 567.709
margin_bottom = 284.735
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensagem_help" type="Label" parent="."]
modulate = Color( 0.34902, 0.654902, 0.901961, 1 )
margin_left = 590.91
margin_top = 204.908
margin_right = 801.91
margin_bottom = 243.908
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_entrar" type="Button" parent="."]
margin_left = 365.38
margin_top = 303.052
margin_right = 518.38
margin_bottom = 355.052
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Login"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_novo" type="Button" parent="."]
margin_left = 362.497
margin_top = 381.193
margin_right = 520.497
margin_bottom = 433.193
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Registrar"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="user" type="TextEdit" parent="."]
margin_left = 303.916
margin_top = 199.816
margin_right = 581.916
margin_bottom = 242.816
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="help" type="Button" parent="."]
margin_left = 577.37
margin_top = 194.66
margin_right = 632.37
margin_bottom = 250.66
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="bt_entrar" to="." method="_on_bt_entrar_pressed"]
[connection signal="pressed" from="bt_novo" to="." method="_on_bt_novo_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="mouse_entered" from="help" to="." method="_on_help_mouse_entered"]
[connection signal="mouse_exited" from="help" to="." method="_on_help_mouse_exited"]
[connection signal="pressed" from="help" to="." method="_on_help_pressed"]
[connection signal="visibility_changed" from="help" to="." method="_on_help_visibility_changed"]
